# discoveryandresearch

./: .gitignore  AGENTICS_PLAN.md  all-discovered.json  index.html  pyproject.toml  requirements.txt
.github/workflows/: discover.yml
data/: spotlight.json
docs/superpowers/plans/: 2026-03-16-discovery-agent.md
docs/superpowers/specs/: 2026-03-16-discovery-agent-design.md
pages/: build.py
pipeline/: deduplicate.py  filter.py  publish.py  recommend.py  run.py  score.py
schemas/: repo.py
scrapers/: _http.py  awesome_lists.py  base.py  github_search.py  github_trending.py  hackernews.py  huggingface.py  lobsters.py  papers_with_code.py  reddit.py  web_aggregators.py
tests/: conftest.py  test_pages.py  test_schema.py
tests/pipeline/: test_deduplicate.py  test_filter.py  test_publish.py  test_recommend.py  test_score.py
tests/scrapers/: test_awesome_lists.py  test_github_search.py  test_github_trending.py  test_hackernews.py  test_huggingface.py  test_lobsters.py  test_papers_with_code.py  test_reddit.py  test_web_aggregators.py
